Wrote basic HTML structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>The Odin Project Form</title>
 </head>
 <body>
-    
+    <div id="left-column">
+        <img src="bg.jpg" alt="background photo of leafy fronds">
+        <div id="logo-background"> <!--This is the transparent black background that help the logo stand out.-->
+            <img src="odin-logo.png" alt="odin icon">
+            <h1 id="logo-text">ODIN</h1>
+        </div>
+        <p>Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com">Unsplash</a></p>
+    </div>
+    <div id="right-column">
+        <h2>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</h2>
+        <h2>You <em>know</em> you want to.</h2>
+        <h2><br>Let's do this!</h2>
+
+        <form action="" method="post">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" placeholder="Jimbo">
+
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" placeholder="McHalsenberry">
+
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="jimbo@securemail.gov">
+
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone">
+
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="********">
+
+            <label for="password-confirm">Confirm Password</label>
+            <input type="password" id="password-confirm">
+
+            <!--There's a line with like a dropshadow here...-->
+
+            <button type="submit">Create Account</button>
+
+            <p>Already have an account? <a href="">Log in</a></p>
+        </form>
+    </div>
 </body>
 </html>
