--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 
         <form action="" method="post">
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" placeholder="Jimbo">
+            <input type="text" id="first-name" name="first-name" placeholder="Jimbo">
 
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" placeholder="McHalsenberry">
+            <input type="text" id="last-name" name="last-name" placeholder="McHalsenberry">
 
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="jimbo@securemail.gov">
+            <input type="email" id="email" name="email" placeholder="jimbo@securemail.gov">
 
             <label for="phone">Phone Number</label>
-            <input type="tel" id="phone">
+            <input type="tel" id="phone" name="phone">
 
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="********">
+            <input type="password" id="password" name="password" placeholder="********">
 
             <label for="password-confirm">Confirm Password</label>
-            <input type="password" id="password-confirm">
+            <input type="password" id="password-confirm" name="password-confirm">
 
             <!--There's a line with like a dropshadow here...-->
 
