Added final styling and validation checks

--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 <body>
     <div id="left-column">
         <!--<img src="bg.jpg" alt="background photo of leafy fronds">-->
+        <p id="photo-footer">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a
+            href="https://unsplash.com">Unsplash</a></p>
         <div id="logo-background">
             <!--This is the transparent black background that help the logo stand out.-->
             <img src="odin-logo.png" alt="odin icon">
             <h1 id="logo-text">ODIN</h1>
         </div>
-        <p id="photo-footer">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a
-                href="https://unsplash.com">Unsplash</a></p>
+        
     </div>
     <div id="right-column">
         <h2 id="top-text">This is not a real online service! You know you need something like this in your life to help you realize
             your deepest dreams. Sign up <em>now</em> to get started.</h2>
-        <h2>You <em>know</em> you want to.</h2>
-        <h2><br>Let's do this!</h2>
+        <h2><br>You <em>know</em> you want to.</h2>
+        <h2><br><br>Let's do this!</h2>
 
         <form action="" method="post">
             <fieldset id="inputs">
@@ -40,22 +41,22 @@
 
                 <div class="input-block">
                     <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email" placeholder="jimbo@securemail.gov">
+                    <input type="email" id="email" name="email" class="validate-me" placeholder="jimbo@securemail.gov">
                 </div>
 
                 <div class="input-block">
                     <label for="phone">PHONE NUMBER</label>
-                    <input type="tel" id="phone" name="phone">
+                    <input type="tel" id="phone" class="validate-me" name="phone">
                 </div>
 
                 <div class="input-block">
                     <label for="password">PASSWORD</label>
-                    <input type="password" id="password" name="password" placeholder="********">
+                    <input type="password" id="password" name="password" class="validate-me" placeholder="********">
                 </div>
 
                 <div class="input-block">
                     <label for="password-confirm">CONFIRM PASSWORD</label>
-                    <input type="password" id="password-confirm" name="password-confirm">
+                    <input type="password" id="password-confirm" class="validate-me" name="password-confirm">
                 </div>
             </fieldset>
 
